--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -5,40 +5,48 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AutomationISE"
              mc:Ignorable="d" 
-             d:DesignHeight="413.139" d:DesignWidth="389.206">
-    <Grid Margin="0,0,-61,-59">
-        <TabControl x:Name="mainTabControl" HorizontalAlignment="Left" Height="394" Margin="10,10,0,0" VerticalAlignment="Top" Width="371">
-            <TabItem x:Name="configurationTab" Header="Configuration">
+             d:DesignHeight="625.08" d:DesignWidth="402.638">
+    <Grid Margin="0,0,-34,-429" HorizontalAlignment="Left">
+        <TabControl x:Name="mainTabControl" HorizontalAlignment="Left" VerticalAlignment="Top" Height="616" RenderTransformOrigin="0.742,0.537">
+            <TabItem x:Name="configurationTab" Header="Configuration" Margin="-2">
                 <TabItem.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         <GradientStop Color="#FFF0F0F0" Offset="0"/>
                         <GradientStop Color="White" Offset="1"/>
                     </LinearGradientBrush>
                 </TabItem.Background>
-                <Grid Background="White">
-                    <Label x:Name="azureADlabel" Content="Azure AD Username" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="147"/>
-                    <TextBox x:Name="azureADTextBox" HorizontalAlignment="Left" Height="23" Margin="10,36,0,0" TextWrapping="Wrap" Text="username@contoso.onmicrosoft.com" VerticalAlignment="Top" Width="300" TextChanged="azureADTextBox_TextChanged"/>
-                    <Label x:Name="passwordLabel" Content="Password" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="251"/>
-                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top" Width="300"/>
-                    <Button x:Name="loginButton" Content="Login" HorizontalAlignment="Left" Margin="10,108,0,0" VerticalAlignment="Top" Width="75" Background="White" Click="loginButton_Click"/>
-                    <ComboBox x:Name="subscriptionComboBox" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="SubscriptionComboBox_SelectionChanged"/>
-                    <ComboBox x:Name="accountsComboBox" HorizontalAlignment="Left" Margin="10,224,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="accountsComboBox_SelectionChanged"/>
-                    <TextBox x:Name="workspaceTextBox" HorizontalAlignment="Left" Height="22" Margin="10,291,0,0" TextWrapping="Wrap" Text="C:\" VerticalAlignment="Top" Width="290" TextChanged="workspaceTextBox_TextChanged"/>
+                <Grid Background="White" Margin="0,9,9,-200" RenderTransformOrigin="0.45,0.712">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="121*"/>
+                        <ColumnDefinition Width="167*"/>
+                        <ColumnDefinition Width="78*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="loginButton" Content="Sign In" HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top" Width="71" Background="White" Click="loginButton_Click" Height="21"/>
+                    <ComboBox x:Name="subscriptionComboBox" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="SubscriptionComboBox_SelectionChanged" Grid.ColumnSpan="3"/>
+                    <ComboBox x:Name="accountsComboBox" HorizontalAlignment="Left" Margin="10,204,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="accountsComboBox_SelectionChanged" Grid.ColumnSpan="3"/>
+                    <TextBox x:Name="workspaceTextBox" HorizontalAlignment="Left" Height="18" Margin="10,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="251" TextChanged="workspaceTextBox_TextChanged" Grid.ColumnSpan="2"/>
+                    <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" Margin="7,5,0,0" VerticalAlignment="Top" Width="251" Grid.ColumnSpan="2"/>
+                    <Button x:Name="workspaceButton" Content="Browse" HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top" Background="White" Width="56" Click="workspaceButton_Click" Height="18" Grid.Column="2"/>
+                    <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" Margin="7,68,0,0" VerticalAlignment="Top" Width="214" Grid.ColumnSpan="2"/>
+                    <Label x:Name="subscriptionLabel" Content="Select Subscription" HorizontalAlignment="Left" Margin="7,126,0,0" VerticalAlignment="Top"/>
+                    <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" Margin="7,181,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="runbookTab" Header="Runbooks" Height="22" VerticalAlignment="Bottom">
+            <TabItem x:Name="runbookTab" Header="Runbooks" Margin="-2">
                 <TabItem.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         <GradientStop Color="#FFF0F0F0" Offset="0"/>
                         <GradientStop Color="White" Offset="1"/>
                     </LinearGradientBrush>
                 </TabItem.Background>
-                <Grid Background="White">
+                <Grid Background="White" Margin="0,10,4,0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="256*"/>
+                        <ColumnDefinition Width="166*"/>
+                        <ColumnDefinition Width="25*"/>
+                        <ColumnDefinition Width="65*"/>
                         <ColumnDefinition Width="109*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView x:Name="RunbookslistView" HorizontalAlignment="Left" Height="273" Margin="10,48,0,0" VerticalAlignment="Top" Width="345" Grid.ColumnSpan="2">
+                    <ListView x:Name="RunbookslistView" HorizontalAlignment="Left" Height="273" Margin="10,48,0,0" VerticalAlignment="Top" Width="345" Grid.ColumnSpan="4">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
@@ -53,7 +61,7 @@
                     </ListView>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="settingsTab" Header="Settings" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="55">
+            <TabItem x:Name="settingsTab" Header="Assets" Width="55" Margin="-2">
                 <TabItem.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                         <GradientStop Color="#FFF0F0F0" Offset="0"/>
