--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="625.08" d:DesignWidth="402.638">
     <Grid Margin="0,0,-34,-429" HorizontalAlignment="Left">
-        <TabControl x:Name="mainTabControl" HorizontalAlignment="Left" VerticalAlignment="Top" Height="616" RenderTransformOrigin="0.742,0.537">
+        <TabControl x:Name="mainTabControl" HorizontalAlignment="Left" VerticalAlignment="Top" Height="598" RenderTransformOrigin="0.742,0.537" Margin="0,10,0,0">
             <TabItem x:Name="configurationTab" Header="Configuration" Margin="-2">
                 <TabItem.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -30,6 +30,7 @@
                     <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" Margin="7,68,0,0" VerticalAlignment="Top" Width="214" Grid.ColumnSpan="2"/>
                     <Label x:Name="subscriptionLabel" Content="Select Subscription" HorizontalAlignment="Left" Margin="7,126,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" Margin="7,181,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <TextBox x:Name="configurationStatusTextBox" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="278" Margin="10,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="331" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="runbookTab" Header="Runbooks" Margin="-2">
