--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -4,10 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AutomationISE"
-             mc:Ignorable="d" 
-             d:DesignHeight="625.08" d:DesignWidth="402.638">
+             mc:Ignorable="d" d:DesignWidth="402.638" Height="634.035">
     <Grid Margin="0,0,-34,-429" HorizontalAlignment="Left">
-        <TabControl x:Name="mainTabControl" HorizontalAlignment="Left" VerticalAlignment="Top" Height="598" RenderTransformOrigin="0.742,0.537" Margin="0,10,0,0">
+        <TabControl x:Name="mainTabControl" HorizontalAlignment="Center" Height="603" RenderTransformOrigin="0.742,0.537" Margin="0,10,0,0" VerticalAlignment="Top">
             <TabItem x:Name="configurationTab" Header="Configuration" Margin="-2">
                 <TabItem.Background>
                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
