--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AutomationISE"
-             mc:Ignorable="d" d:DesignWidth="402.638" Height="634.035">
-    <Grid Margin="0,0,-34,-429" HorizontalAlignment="Left">
+             mc:Ignorable="d">
+    <Grid Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
         <TabControl x:Name="mainTabControl" HorizontalAlignment="Center" Height="603" RenderTransformOrigin="0.742,0.537" Margin="0,10,0,0" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged">
             <TabItem x:Name="configurationTab" Header="Configuration" Margin="-2">
                 <TabItem.Background>
