--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -5,49 +5,38 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AutomationISE"
              mc:Ignorable="d">
-    <Grid Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
-        <TabControl x:Name="mainTabControl" HorizontalAlignment="Center" Height="603" RenderTransformOrigin="0.742,0.537" Margin="0,10,0,0" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged">
-            <TabItem x:Name="configurationTab" Header="Configuration" Margin="-2">
-                <TabItem.Background>
-                    <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                        <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                        <GradientStop Color="White" Offset="1"/>
-                    </LinearGradientBrush>
-                </TabItem.Background>
-                <Grid Background="White" Margin="0,9,9,-200" RenderTransformOrigin="0.45,0.712">
+    <Grid>
+        <TabControl x:Name="mainTabControl" SelectionChanged="TabControl_SelectionChanged">
+            <TabItem x:Name="configurationTab" Header="Configuration">
+                <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="121*"/>
-                        <ColumnDefinition Width="167*"/>
-                        <ColumnDefinition Width="78*"/>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Button x:Name="loginButton" Content="Sign In" HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top" Width="71" Background="White" Click="loginButton_Click" Height="21"/>
-                    <ComboBox x:Name="subscriptionComboBox" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="SubscriptionComboBox_SelectionChanged" Grid.ColumnSpan="3"/>
-                    <ComboBox x:Name="accountsComboBox" HorizontalAlignment="Left" Margin="10,204,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="accountsComboBox_SelectionChanged" Grid.ColumnSpan="3"/>
-                    <TextBox x:Name="workspaceTextBox" HorizontalAlignment="Left" Height="18" Margin="10,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="251" TextChanged="workspaceTextBox_TextChanged" Grid.ColumnSpan="2"/>
-                    <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" Margin="7,5,0,0" VerticalAlignment="Top" Width="251" Grid.ColumnSpan="2"/>
-                    <Button x:Name="workspaceButton" Content="Browse" HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top" Background="White" Width="56" Click="workspaceButton_Click" Height="18" Grid.Column="2"/>
-                    <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" Margin="7,68,0,0" VerticalAlignment="Top" Width="214" Grid.ColumnSpan="2"/>
-                    <Label x:Name="subscriptionLabel" Content="Select Subscription" HorizontalAlignment="Left" Margin="7,126,0,0" VerticalAlignment="Top"/>
-                    <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" Margin="7,181,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-                    <TextBox x:Name="configurationStatusTextBox" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="278" Margin="10,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="331" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
-                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" Margin="10,247,0,0" VerticalAlignment="Top" Width="64"/>
+                    <Grid.RowDefinitions>
+                    </Grid.RowDefinitions>
+                    <Button x:Name="loginButton" Content="Sign In" HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top" Width="71" Click="loginButton_Click" Height="21"/>
+                    <ComboBox x:Name="subscriptionComboBox" Margin="10,148,10,0" VerticalAlignment="Top" SelectionChanged="SubscriptionComboBox_SelectionChanged" Grid.ColumnSpan="2" Height="22"/>
+                    <ComboBox x:Name="accountsComboBox" Margin="10,204,10,0" VerticalAlignment="Top" SelectionChanged="accountsComboBox_SelectionChanged" Grid.ColumnSpan="2" Height="22"/>
+                    <TextBox x:Name="workspaceTextBox" Height="18" Margin="10,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0"/>
+                    <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" Margin="7,5,0,0" VerticalAlignment="Top" Width="251" Grid.ColumnSpan="2" Height="26"/>
+                    <Button x:Name="workspaceButton" Content="Browse" HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top" Width="56" Click="workspaceButton_Click" Height="18" Grid.Column="1"/>
+                    <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" Margin="7,68,0,0" VerticalAlignment="Top" Width="214" Height="26"/>
+                    <Label x:Name="subscriptionLabel" Content="Select Subscription" HorizontalAlignment="Left" Margin="7,126,0,0" VerticalAlignment="Top" Height="26" Width="111"/>
+                    <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" Margin="7,181,0,0" VerticalAlignment="Top" Height="26" Width="154"/>
+                    <TextBox x:Name="configurationStatusTextBox" Grid.ColumnSpan="2" Height="278" Margin="10,271,10,0" TextWrapping="Wrap" VerticalAlignment="Top" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
+                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" Margin="10,247,0,0" VerticalAlignment="Top" Width="64" Height="26"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="runbookTab" Header="Runbooks" Margin="-2">
-                <TabItem.Background>
-                    <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                        <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                        <GradientStop Color="White" Offset="1"/>
-                    </LinearGradientBrush>
-                </TabItem.Background>
-                <Grid Background="White" Margin="0,10,4,0">
+            <TabItem x:Name="runbookTab" Header="Runbooks">
+                <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="166*"/>
-                        <ColumnDefinition Width="25*"/>
-                        <ColumnDefinition Width="65*"/>
-                        <ColumnDefinition Width="109*"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView x:Name="RunbookslistView" HorizontalAlignment="Left" Height="273" Margin="10,48,0,0" VerticalAlignment="Top" Width="345" Grid.ColumnSpan="4">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <ListView x:Name="RunbookslistView" Margin="10,48,10,0" Grid.Row="0" Grid.Column="0">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
