--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -33,12 +33,16 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
-                        <RowDefinition Height="45"/>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="RunbookslistView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0">
+                    <ListView x:Name="RunbookslistView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
@@ -52,7 +56,12 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="RefreshRunbookList" Grid.Column="0" Grid.Row="1" Margin="10,10,10,10" Content="Refresh" Click="RefreshRunbookList_Click" />
+                    <Button x:Name="DownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="DownloadRunbook_Click"/>
+                    <Button x:Name="OpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" />
+                    <Button x:Name="RefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" />
+                    <Button x:Name="UploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" />
+                    <Button x:Name="PublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" />
+                    <Button x:Name="StartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" />
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets" Width="55" Margin="-2">
