--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -14,19 +14,24 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Name="Workspace" Height="50"/>
+                        <RowDefinition Name="SignIn" Height="50"/>
+                        <RowDefinition Name="Subscription" Height="50"/>
+                        <RowDefinition Name="Account" Height="50"/>
+                        <RowDefinition Name="Status" Height="*"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="loginButton" Content="Sign In" HorizontalAlignment="Left" Margin="10,99,0,0" VerticalAlignment="Top" Width="71" Click="loginButton_Click" Height="21"/>
-                    <TextBox x:Name="userNameTextBox" Height="18" Margin="10,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="userNameTextBox_TextChanged" Grid.Column="0"/>
-                    <ComboBox x:Name="subscriptionComboBox" Margin="10,148,10,0" VerticalAlignment="Top" SelectionChanged="SubscriptionComboBox_SelectionChanged" Grid.ColumnSpan="2" Height="22"/>
-                    <ComboBox x:Name="accountsComboBox" Margin="10,204,10,0" VerticalAlignment="Top" SelectionChanged="accountsComboBox_SelectionChanged" Grid.ColumnSpan="2" Height="22"/>
-                    <TextBox x:Name="workspaceTextBox" Height="18" Margin="10,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0"/>
-                    <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" Margin="7,5,0,0" VerticalAlignment="Top" Width="251" Grid.ColumnSpan="2" Height="26"/>
-                    <Button x:Name="workspaceButton" Content="Browse" HorizontalAlignment="Left" Margin="5,31,0,0" VerticalAlignment="Top" Width="56" Click="workspaceButton_Click" Height="18" Grid.Column="1"/>
-                    <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" Margin="7,55,0,0" VerticalAlignment="Top" Width="214" Height="26"/>
-                    <Label x:Name="subscriptionLabel" Content="Select Subscription" HorizontalAlignment="Left" Margin="7,126,0,0" VerticalAlignment="Top" Height="26" Width="111"/>
-                    <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" Margin="7,181,0,0" VerticalAlignment="Top" Height="26" Width="154"/>
-                    <TextBox x:Name="configurationStatusTextBox" Grid.ColumnSpan="2" Height="278" Margin="10,271,10,0" TextWrapping="Wrap" VerticalAlignment="Top" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
-                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" Margin="10,247,0,0" VerticalAlignment="Top" Width="64" Height="26"/>
+                    <Button x:Name="loginButton" Content="Sign In" Margin="5" VerticalAlignment="Bottom" Click="loginButton_Click" Grid.Column="1" Grid.Row="1"/>
+                    <TextBox x:Name="userNameTextBox" TextWrapping="Wrap" Margin="5" VerticalAlignment="Bottom" TextChanged="userNameTextBox_TextChanged" Grid.Column="0" Grid.Row="1"/>
+                    <ComboBox x:Name="subscriptionComboBox" Margin="5" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Bottom" SelectionChanged="SubscriptionComboBox_SelectionChanged" />
+                    <ComboBox x:Name="accountsComboBox" Margin="5" VerticalAlignment="Bottom" SelectionChanged="accountsComboBox_SelectionChanged" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <TextBox x:Name="workspaceTextBox" Margin="5" TextWrapping="Wrap" VerticalAlignment="Bottom" TextChanged="workspaceTextBox_TextChanged" Grid.Column="0" Grid.Row="0"/>
+                    <Label x:Name="workspaceLabel" Content="Location to store runbooks and assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="0" />
+                    <Button x:Name="workspaceButton" Content=" Browse " Margin="5" VerticalAlignment="Bottom" Click="workspaceButton_Click" Grid.Column="1" Grid.Row="0"/>
+                    <Label x:Name="signinLabel" Content="Sign in to Azure Automation" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0"/>
+                    <Label x:Name="subscriptionLabel" Content="Select Subscription" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="3" Grid.Column="0"/>
+                    <TextBox x:Name="configurationStatusTextBox" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,25,5,5" TextWrapping="Wrap" BorderThickness="2" TextChanged="configurationStatusTextBox_TextChanged"/>
+                    <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="runbookTab" Header="Runbooks">
