Added feedback tab

--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -93,6 +93,14 @@
                     <ComboBox x:Name="assetsComboBox" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" Width="279" SelectionChanged="assetsComboBox_SelectionChanged"/>
                 </Grid>
             </TabItem>
+            <TabItem x:Name="feedbackTab" Header="Give Feedback">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <WebBrowser x:Name="surveyBrowserControl" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1"/>
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
 </UserControl>
