--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -69,28 +69,40 @@
                     <Button x:Name="StartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" />
                 </Grid>
             </TabItem>
-            <TabItem x:Name="settingsTab" Header="Assets" Width="55" Margin="-2">
-                <TabItem.Background>
-                    <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                        <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                        <GradientStop Color="White" Offset="1"/>
-                    </LinearGradientBrush>
-                </TabItem.Background>
-                <Grid Background="White">
-                    <ListView x:Name="assetsListView" HorizontalAlignment="Left" Height="252" Margin="10,52,0,0" VerticalAlignment="Top" Width="345" SelectionChanged="assetsListView_SelectionChanged">
+            <TabItem x:Name="settingsTab" Header="Assets">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="35"/>
+                        <RowDefinition Height="5"/>
+                    </Grid.RowDefinitions>
+                    <ComboBox x:Name="assetsComboBox" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="assetsComboBox_SelectionChanged"/>
+                    <ListView x:Name="assetsListView" Margin="10,10,10,0" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="assetsListView_SelectionChanged">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
                                     <ContextMenu/>
                                 </GridView.ColumnHeaderContextMenu>
-                                <GridViewColumn Header="Name"   DisplayMemberBinding="{Binding Name}"/>
-                                <GridViewColumn Header="Sync Status"   DisplayMemberBinding="{Binding SyncStatus}"/>
-                                <GridViewColumn Header="Last Modified (Local)"  DisplayMemberBinding="{Binding LastModifiedLocal}"/>
-                                <GridViewColumn Header="Last Modified (Cloud)"  DisplayMemberBinding="{Binding LastModifiedCloud}"/>
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
+                                <GridViewColumn Header="Sync Status" DisplayMemberBinding="{Binding SyncStatus}" />
+                                <GridViewColumn Header="Last Modified (Local)" DisplayMemberBinding="{Binding LastModifiedLocal}"  />
+                                <GridViewColumn Header="Last Modified (Cloud)" DisplayMemberBinding="{Binding LastModifiedCloud}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ComboBox x:Name="assetsComboBox" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" Width="279" SelectionChanged="assetsComboBox_SelectionChanged"/>
+                    <Button x:Name="NewAsset" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="New" />
+                    <Button x:Name="EditAsset" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Edit Locally" />
+                    <Button x:Name="RefreshAssetList" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Refresh" />
+                    <Button x:Name="DownloadAsset" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Download" Click="DownloadAsset_Click"/>
+                    <Button x:Name="UploadAsset" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Upload" />
+                    <Button x:Name="SyncAssets" Grid.Column="2" Grid.Row="3" Margin="5,10,5,0" Content="Sync" />
                 </Grid>
             </TabItem>
             <TabItem x:Name="feedbackTab" Header="Give Feedback">
