--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -99,7 +99,7 @@
                     </ListView>
                     <Button x:Name="NewAsset" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="New" />
                     <Button x:Name="EditAsset" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Edit Locally" />
-                    <Button x:Name="RefreshAssetList" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Refresh" />
+                    <Button x:Name="RefreshAssetList" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Refresh" Click="RefreshAssetList_Click" />
                     <Button x:Name="DownloadAsset" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Download" Click="DownloadAsset_Click"/>
                     <Button x:Name="UploadAsset" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Upload" />
                     <Button x:Name="SyncAssets" Grid.Column="2" Grid.Row="3" Margin="5,10,5,0" Content="Sync" />
