--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -47,7 +47,7 @@
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="RunbookslistView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                    <ListView x:Name="RunbooksListView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
@@ -61,12 +61,12 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="DownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="DownloadRunbook_Click"/>
-                    <Button x:Name="OpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" />
-                    <Button x:Name="RefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" />
-                    <Button x:Name="UploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" />
-                    <Button x:Name="PublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" />
-                    <Button x:Name="StartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" />
+                    <Button x:Name="DownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="DownloadRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="OpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" IsEnabled="False"/>
+                    <Button x:Name="RefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" IsEnabled="False"/>
+                    <Button x:Name="UploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" IsEnabled="False" />
+                    <Button x:Name="PublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" IsEnabled="False" />
+                    <Button x:Name="StartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" IsEnabled="False"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
