--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -47,7 +47,7 @@
                         <RowDefinition Height="35"/>
                         <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="RunbooksListView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
+                    <ListView x:Name="RunbooksListView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="RunbooksListView_SelectionChanged">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
@@ -62,10 +62,10 @@
                         </ListView.View>
                     </ListView>
                     <Button x:Name="DownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="DownloadRunbook_Click" IsEnabled="False"/>
-                    <Button x:Name="OpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" IsEnabled="False"/>
+                    <Button x:Name="OpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" Click="OpenRunbook_Click"  IsEnabled="False"/>
                     <Button x:Name="RefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" IsEnabled="False"/>
                     <Button x:Name="UploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" IsEnabled="False" />
-                    <Button x:Name="PublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" IsEnabled="False" />
+                    <Button x:Name="PublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" Click="PublishRunbook_Click" IsEnabled="False" />
                     <Button x:Name="StartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" IsEnabled="False"/>
                 </Grid>
             </TabItem>
