--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -100,8 +100,8 @@
                     <Button x:Name="ButttonNewAsset" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="New" />
                     <Button x:Name="ButtonEditAsset" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Edit Locally" />
                     <Button x:Name="ButtonRefreshAssetList" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Refresh" Click="ButtonRefreshAssetList_Click" />
-                    <Button x:Name="ButtonDownloadAsset" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadAsset_Click"/>
-                    <Button x:Name="ButtonUploadAsset" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Upload" />
+                    <Button x:Name="ButtonDownloadAsset" Grid.Column="0" Grid.Row="3" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadAsset_Click" />
+                    <Button x:Name="ButtonUploadAsset" Grid.Column="1" Grid.Row="3" Margin="5,10,5,0" Content="Upload" Click="ButtonUploadAsset_Click" />
                     <Button x:Name="ButtonSyncAssets" Grid.Column="2" Grid.Row="3" Margin="5,10,5,0" Content="Sync" />
                 </Grid>
             </TabItem>
