--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -61,12 +61,12 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="ButtonDownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadRunbook_Click"/>
-                    <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" />
-                    <Button x:Name="ButtonRefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" />
-                    <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" />
-                    <Button x:Name="ButtonPublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" />
-                    <Button x:Name="ButtonStartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" />
+                    <Button x:Name="ButtonDownloadRunbook" Grid.Column="0" Grid.Row="1" Margin="5,10,5,0" Content="Download" Click="ButtonDownloadRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="ButtonOpenRunbook" Grid.Column="1" Grid.Row="1" Margin="5,10,5,0" Content="Open Local Copy" Click="ButtonOpenRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="ButtonRefreshRunbookList" Grid.Column="2" Grid.Row="1" Margin="5,10,5,0" Content="Refresh" IsEnabled="False"/>
+                    <Button x:Name="ButtonUploadRunbook" Grid.Column="0" Grid.Row="2" Margin="5,10,5,0" Content="Upload and Test" IsEnabled="False"/>
+                    <Button x:Name="ButtonPublishRunbook" Grid.Column="1" Grid.Row="2" Margin="5,10,5,0" Content="Publish" Click="ButtonPublishRunbook_Click" IsEnabled="False"/>
+                    <Button x:Name="ButtonStartRunbook" Grid.Column="2" Grid.Row="2" Margin="5,10,5,0" Content="Start in Azure" IsEnabled="False"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="settingsTab" Header="Assets">
