--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -33,7 +33,7 @@
                     <Label x:Name="subscriptionLabel" Content="Select Subscription" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Left" VerticalAlignment="Top"/>
                     <Label x:Name="automationAccountLabel" Content="Select Automation Account" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="3" Grid.Column="0"/>
                     <Label x:Name="configurationStatusLabel" Content="Status" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"/>
-                    <Label x:Name="certificateStatusLabel" Content="Certificate thumbprint to encyrpt local assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <Label x:Name="certificateStatusLabel" Content="Certificate thumbprint to encrypt local assets" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
                     <TextBox x:Name="certificateTextBox" TextWrapping="Wrap" Margin="5" VerticalAlignment="Bottom" TextChanged="certificateTextBox_TextChanged" Grid.Column="0" Grid.Row="4"/>
                     <Button x:Name="certificateButton" Content="Change" Margin="5" VerticalAlignment="Bottom" Click="certificateButton_Click" Grid.Column="1" Grid.Row="4"/>
 
