multiple runbooks can now be selected at a time, by holding the Shift or Ctrl keys.

--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -57,7 +57,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="RunbooksListView" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="RunbooksListView_SelectionChanged">
+                    <ListView x:Name="RunbooksListView" SelectionMode="Extended" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" SelectionChanged="RunbooksListView_SelectionChanged">
                         <ListView.View>
                             <GridView>
                                 <GridView.ColumnHeaderContextMenu>
