Added help tab so we can give some basic help to use the add on. Currently directs to the github page for this project but will need to clean up once we get some better content written.

--- a/AutomationISE/AutomationISEControl.xaml
+++ b/AutomationISE/AutomationISEControl.xaml
@@ -166,6 +166,14 @@
                     <WebBrowser x:Name="surveyBrowserControl" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1"/>
                 </Grid>
             </TabItem>
+                        <TabItem x:Name="helpTab" Header="Help">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <WebBrowser x:Name="helpBrowserControl" Margin="10,10,10,0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1"/>
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
 </UserControl>
